# pevm-bench

./: Cargo.toml  README.md
data/: erc20_transfer_basic_usdt.json  erc20_transfer_proxy_usdc.json  uniswap2_multiple.json  uniswap2_single.json  uniswap3_single.json
src/: main.rs
