[package]
name = "pevm-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = "0.5.1"
# alloy
alloy-chains = "0.1.54"
alloy-consensus = "0.9.2"
alloy-primitives = { version = "0.8.18", features = [
  "asm-keccak",
  "map-fxhash",
] }
alloy-provider = "0.9.2"
alloy-rlp = "0.3.10"
alloy-rpc-types-eth = "0.9.2"
alloy-transport = "0.9.2"
alloy-transport-http = "0.9.2"
alloy-trie = "0.7.8"

revm = { git = "https://github.com/risechain/revm", rev = "ac75f1ef59ecae15238f5a2e94e71c3bcc01d45c", features = [
  "serde",
] }
revme = { git = "https://github.com/risechain/revm", rev = "ac75f1ef59ecae15238f5a2e94e71c3bcc01d45c" }
pevm = { git = "https://github.com/risechain/pevm.git", rev = "4e8ff98e54c76af2c52072ca19b0d96eb5c6b6e9", features = ["global-alloc"] }
hashbrown = "0.15.2"
serde = "1.0.217"
serde_json = "1.0.135"
